Refactor classes to enhance immutability, validation, and readability; implement custom exceptions for error handling; improve data structure management in TiendaOnline.